tripapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripapi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripapi
  template:
    metadata:
      labels:
        app: tripapi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: tripapi
        image: registryrmc7467.azurecr.io/tripapi:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripapi
  namespace: api
spec:
  ports:
  - port: 80
  selector:
    app: tripapi
