userapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: userapi
        image: registryrmc7467.azurecr.io/userapi:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userapi
  namespace: api
spec:
  ports:
  - port: 80
  selector:
    app: userapi
