userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: userprofile
        image: registryrmc7467.azurecr.io/userprofile:v1
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/mnt/secrets"
            readOnly: true
      volumes:
      - name: secrets-store01-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
