ingress_api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: humongous-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: userapi
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: tripapi
            port:
              number: 80
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poiapi
            port:
              number: 80
